tests/negative/runtime/appendfile_missing_dir/input.ci
void main() {
    appendFile("missing/out.txt", "x");
}
